# aerp

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  check_review.py  docker-compose.yml  fix_review.py  main.py  pyproject.toml  requirements.txt  rewrite_reviews.py  scratch_check_review.py  test_db.py  trigger_review.py
backend/: main.py  test_embed.py
backend/agents/: architecture_agent.py  base_agent.py  blast_radius_agent.py  code_review_agent.py  consensus_agent.py  database_agent.py  documentation_agent.py  orchestrator_agent.py  requirements_agent.py  scalability_agent.py  security_agent.py  standards_agent.py  test_agent.py
backend/api/: deps.py
backend/config/: settings.py
backend/db/: init.sql  session.py
backend/graph/: nodes.py  state.py  workflow.py
backend/models/: findings.py
backend/prompts/: architecture.py  blast_radius.py  code_review.py  consensus.py  database.py  documentation.py  orchestrator.py  requirements.py  scalability.py  security.py  standards.py  test.py
backend/rag/: chunker.py  embedder.py  indexer.py  retriever.py
docs/: aerp_feature_document.md
frontend/: .gitignore  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  (+2 more)
scratch/: test_login.py
scripts/: accept_ownership.py  create_google_docs.py  create_jira_tickets.py  populate_google_docs.py  test_create_doc.py  test_github_token.py  test_google_docs.py  test_jira_identity.py  trigger_phase7.py  update_github_prs.py
tests/: test_embed.py  test_jira_curl.py  test_list_models.py  test_local_ollama.py  test_redis.py
(+44 files in other folders)
