[project]
name = "aerp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic==1.14.0",
    "asyncpg==0.30.0",
    "authlib>=1.7.2",
    "bcrypt>=5.0.0",
    "celery[redis]==5.4.0",
    "email-validator>=2.3.0",
    "fastapi==0.115.5",
    "flower==2.0.1",
    "google-api-python-client==2.154.0",
    "google-auth-httplib2==0.2.0",
    "google-auth-oauthlib==1.2.1",
    "httpx==0.28.1",
    "itsdangerous>=2.2.0",
    "jira==3.8.0",
    "langchain==0.3.13",
    "langchain-anthropic==0.3.0",
    "langchain-community==0.3.13",
    "langchain-core==0.3.28",
    "langchain-google-genai==2.0.7",
    "langchain-ollama==0.2.0",
    "langchain-openai>=0.2.14",
    "langchain-postgres==0.0.12",
    "langgraph==0.3.0",
    "langgraph-checkpoint-redis==0.0.4",
    "pgvector==0.2.5",
    "psycopg2-binary==2.9.10",
    "pydantic-settings==2.6.1",
    "pygithub==2.5.0",
    "pytest==8.3.4",
    "pytest-asyncio==0.25.0",
    "pytest-mock==3.14.0",
    "python-dotenv==1.0.1",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart==0.0.12",
    "redis==5.2.1",
    "sqlalchemy[asyncio]==2.0.36",
    "structlog==24.4.0",
    "tenacity==9.0.0",
    "uvicorn[standard]==0.32.1",
]
